--- a/app/src/main/res/layout/activity_ongoingorders.xml
+++ b/app/src/main/res/layout/activity_ongoingorders.xml
@@ -1,62 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    >
+    tools:context=".ongoingFragment">
 
-    <LinearLayout
-        android:id="@+id/ongoingorderslayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_height="match_parent"
+        >
 
-        <ImageView
-            android:id="@+id/crossicon"
-            app:srcCompat="@drawable/cross"
-            android:layout_width="30dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:adjustViewBounds="true"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:padding="0dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:scaleType="centerInside"/>
-
-        <TextView
-            android:id="@+id/ongoingtext"
-            android:layout_width="wrap_content"
+        <!-- Toolbar with menu button and Cart text -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/ongoing_toolbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ongoing Orders"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
-    </LinearLayout>
+            android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <!-- TextView for "no ongoing orders" message -->
-    <TextView
-        android:id="@+id/emptyCartMessage"
+            <ImageButton
+                android:id="@+id/buttonDrawerToggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:padding="10dp"
+                android:src="@drawable/drawer_menu" />
+
+            <TextView
+                android:id="@+id/ongoingtext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ongoing Orders"
+                android:layout_marginLeft="30dp"
+                android:layout_gravity="center_vertical"
+                android:textSize="24sp"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+        </androidx.appcompat.widget.Toolbar>
+
+
+
+        <!-- Nested scroll view and recyclerview to display the items that were added to cart -->
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/ongoingpagesv"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/ongoing_toolbar"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/ongoingrv"
+                    android:layout_marginTop="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="vertical"/>
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No ongoing orders"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/ongoingorderslayout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center"
-        android:padding="16dp"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:dividerInsetStart="50dp"
+        app:headerLayout="@layout/drawer_header"
+        app:itemIconPadding="30dp"
+        app:menu="@menu/drawer_items" />
+</androidx.drawerlayout.widget.DrawerLayout>
