--- a/app/src/main/res/layout/activity_cartpage.xml
+++ b/app/src/main/res/layout/activity_cartpage.xml
@@ -24,13 +24,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageButton
-                android:id="@+id/buttonDrawerToggle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:padding="10dp"
-                android:src="@drawable/drawer_menu" />
+
 
             <TextView
                 android:id="@+id/carttext"
@@ -42,6 +36,16 @@
                 android:textSize="24sp"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
+
+
+            <ImageButton
+                android:id="@+id/crossBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="275dp"
+                android:background="@android:color/transparent"
+                android:padding="10dp"
+                android:src="@drawable/cross" />
         </androidx.appcompat.widget.Toolbar>
 
         <!-- TextView for "Cart is empty" message -->
