--- a/app/src/main/res/drawable/cart_button_background_rounded.xml
+++ b/app/src/main/res/drawable/cart_button_background_rounded.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/orange"/> <!-- Background color -->
+    <solid android:color="@color/white"/> <!-- Background color -->
     <corners
         android:topLeftRadius="10dp"
         android:topRightRadius="0dp"
