--- a/app/src/main/res/layout/voucher_item.xml
+++ b/app/src/main/res/layout/voucher_item.xml
@@ -8,15 +8,28 @@
     android:padding="20dp"
     android:layout_marginTop="20dp">
 
-    <TextView
-        android:id="@+id/voucherTitle"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Voucher Title"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/voucherTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Voucher Title"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/voucherDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Voucher Description"
+            android:textSize="16sp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/voucherDiscount"
