--- a/app/src/main/res/layout/activity_cartpage.xml
+++ b/app/src/main/res/layout/activity_cartpage.xml
@@ -18,12 +18,20 @@
             android:id="@+id/cart_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:background="@color/white"
+            android:padding="20dp"
+            android:background="@color/orange"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+
+            <ImageButton
+                android:id="@+id/crossBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:padding="10dp"
+                android:src="@drawable/cross" />
 
 
             <TextView
@@ -34,18 +42,11 @@
                 android:layout_marginLeft="30dp"
                 android:layout_gravity="center_vertical"
                 android:textSize="24sp"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textStyle="bold" />
 
 
-            <ImageButton
-                android:id="@+id/crossBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="275dp"
-                android:background="@android:color/transparent"
-                android:padding="10dp"
-                android:src="@drawable/cross" />
+
         </androidx.appcompat.widget.Toolbar>
 
         <!-- TextView for "Cart is empty" message -->
@@ -99,6 +100,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/white">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/grey"
+                android:layout_marginBottom="10dp"/>
+
 
             <TextView
                 android:layout_width="wrap_content"
