--- a/app/src/main/res/layout/activity_flitering_page.xml
+++ b/app/src/main/res/layout/activity_flitering_page.xml
@@ -14,7 +14,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="@color/white"
+        android:background="@color/lightBrown"
         android:layout_height="wrap_content"
         android:padding="25dp"
         android:orientation="vertical"
